--- a/index.html
+++ b/index.html
@@ -496,8 +496,7 @@ structured logs and better troubleshooting capabilities.</p>
 <div class="ulist">
 <ul>
 <li>
-<p><a href="#aws-cloudwatch.adoc">Collecting logs from EC2 instances,
-CloudTrail, Route 53, AWS Lambda and others</a></p>
+<p><a href="aws-cloudwatch.html">Collecting logs from EC2 instances, CloudTrail, Route 53, AWS Lambda and others</a></p>
 </li>
 </ul>
 </div>
@@ -568,7 +567,7 @@ dashboards</a></p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2019-02-01 16:48:52 +0100
+Last updated 2019-02-21 10:51:37 +0100
 </div>
 </div>
 </body>
