Use level 1 for headers

--- a/aws-cloudwatch.html
+++ b/aws-cloudwatch.html
@@ -432,16 +432,18 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </head>
 <body class="article">
 <div id="header">
+<h1>AWS CloudWatch Logs</h1>
 </div>
 <div id="content">
-<div class="sect1">
-<h2 id="_aws_cloudwatch_logs">AWS CloudWatch Logs</h2>
+<div id="preamble">
 <div class="sectionbody">
 <div class="paragraph">
 <p>Amazon CloudWatch Logs service is frequently used to monitor, store and access
 log files from multiple sources, including EC2, Route 53, AWS Lambda ana
 many others. The simplest way to integrate it is to create an AWS Lambda
 function that pushes logs incoming to CloudWatch Logs to LogSense too.</p>
+</div>
+</div>
 </div>
 <div class="sect2">
 <h3 id="_step_1_create_the_role_that_has_cloudwatch_logs_access"><strong>Step 1:</strong> Create the role that has CloudWatch Logs access</h3>
@@ -557,11 +559,9 @@ those changes</p>
 </div>
 </div>
 </div>
-</div>
-</div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2019-02-01 16:15:01 +0100
+Last updated 2019-02-26 01:09:52 +0100
 </div>
 </div>
 </body>
