--- a/dot-net.html
+++ b/dot-net.html
@@ -432,11 +432,9 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </head>
 <body class="article">
 <div id="header">
+<h1>.NET using a <code>Serilog</code> LogSense-dedicated plugin</h1>
 </div>
 <div id="content">
-<div class="sect1">
-<h2 id="_net_using_a_serilog_logsense_dedicated_plugin">.NET using a <code>Serilog</code> LogSense-dedicated plugin</h2>
-<div class="sectionbody">
 <div class="sect2">
 <h3 id="_step_1_download_the_plugin_and_add_it_as_a_dependency"><strong>Step 1:</strong> Download the plugin and add it as a dependency</h3>
 <div class="paragraph">
@@ -483,11 +481,9 @@ folder of the plugin repository.</p>
 </div>
 </div>
 </div>
-</div>
-</div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2019-02-01 16:42:50 +0100
+Last updated 2019-02-26 01:09:56 +0100
 </div>
 </div>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.13.1/styles/github.min.css">
