--- a/fluentd.html
+++ b/fluentd.html
@@ -432,11 +432,9 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </head>
 <body class="article">
 <div id="header">
+<h1>Generic <code>fluentd</code> forwarder client setup</h1>
 </div>
 <div id="content">
-<div class="sect1">
-<h2 id="_generic_fluentd_forwarder_client_setup">Generic <code>fluentd</code> forwarder client setup</h2>
-<div class="sectionbody">
 <div class="paragraph">
 <p>It is possible to use a generic fluentd forward protocol. Either acting
 as a relay or as a source of logs. Following properties must be set:</p>
@@ -510,11 +508,9 @@ logs</p>
 </div>
 </div>
 </div>
-</div>
-</div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2019-02-01 16:23:42 +0100
+Last updated 2019-02-26 01:10:00 +0100
 </div>
 </div>
 </body>
