--- a/java.html
+++ b/java.html
@@ -430,13 +430,11 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 @media amzn-kf8{#header,#content,#footnotes,#footer{padding:0}}
 </style>
 </head>
-<body class="article">
+<body id="java" class="article">
 <div id="header">
+<h1>Logback-logsense for Java and anything JVM-based</h1>
 </div>
 <div id="content">
-<div class="sect1">
-<h2 id="java">Logback-logsense for Java and anything JVM-based</h2>
-<div class="sectionbody">
 <div class="sect2">
 <h3 id="_step_1_add_logback_logsense_dependency"><strong>Step 1:</strong> Add logback-logsense dependency</h3>
 <div class="paragraph">
@@ -546,8 +544,6 @@ public class Example {
     &lt;/root&gt;
 
 &lt;/configuration&gt;</code></pre>
-</div>
-</div>
 </div>
 </div>
 </div>
@@ -663,7 +659,7 @@ repository</a></p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2019-02-01 16:03:36 +0100
+Last updated 2019-02-26 01:10:04 +0100
 </div>
 </div>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.13.1/styles/github.min.css">
