--- a/nc-test.html
+++ b/nc-test.html
@@ -432,11 +432,9 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </head>
 <body class="article">
 <div id="header">
+<h1>Simple <code>syslog</code> test via netcat</h1>
 </div>
 <div id="content">
-<div class="sect1">
-<h2 id="_simple_syslog_test_via_netcat">Simple <code>syslog</code> test via netcat</h2>
-<div class="sectionbody">
 <div class="paragraph">
 <p>The simplest way to check if logs are being sent is using <code>nc</code> (netcat)
 utility that usually comes preinstalled on Linux or macOS systems.</p>
@@ -464,11 +462,9 @@ the confirmation email):</p>
 which should be immediately visible in LogSense.</p>
 </div>
 </div>
-</div>
-</div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2019-02-01 16:19:26 +0100
+Last updated 2019-02-26 01:10:12 +0100
 </div>
 </div>
 </body>
