--- a/nodejs.html
+++ b/nodejs.html
@@ -432,11 +432,9 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </head>
 <body class="article">
 <div id="header">
+<h1>NodeJS using <code>fluent-logger</code></h1>
 </div>
 <div id="content">
-<div class="sect1">
-<h2 id="_nodejs_using_fluent_logger">NodeJS using <code>fluent-logger</code></h2>
-<div class="sectionbody">
 <div class="sect2">
 <h3 id="_step_1_add_fluent_logger_dependency"><strong>Step 1:</strong> Add <code>fluent-logger</code> dependency</h3>
 <div class="paragraph">
@@ -508,11 +506,9 @@ page.</p>
 </div>
 </div>
 </div>
-</div>
-</div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2019-02-01 16:42:52 +0100
+Last updated 2019-02-26 01:10:19 +0100
 </div>
 </div>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.13.1/styles/github.min.css">
