--- a/windows.html
+++ b/windows.html
@@ -432,10 +432,10 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </head>
 <body class="article">
 <div id="header">
+<h1>Windows Event Logs using td-agent</h1>
 </div>
 <div id="content">
-<div class="sect1">
-<h2 id="_windows_event_logs_using_td_agent">Windows Event Logs using td-agent</h2>
+<div id="preamble">
 <div class="sectionbody">
 <div class="paragraph">
 <p>The suggested solution for sending Windows Event Logs is to use
@@ -462,6 +462,8 @@ plugin</a> to provide capabilities to read and push Windows Event Logs.</p>
 </div>
 <div class="paragraph">
 <p>The exact steps are following:</p>
+</div>
+</div>
 </div>
 <div class="sect2">
 <h3 id="_step_1_install_td_agent"><strong>Step 1:</strong> Install td-agent</h3>
@@ -573,11 +575,9 @@ Double click on <code>Fluentd Windows Service</code> and click Start button.</p>
 <hr>
 </div>
 </div>
-</div>
-</div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2019-02-01 16:43:06 +0100
+Last updated 2019-02-26 01:10:25 +0100
 </div>
 </div>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.13.1/styles/github.min.css">
