--- a/apache.html
+++ b/apache.html
@@ -432,10 +432,10 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </head>
 <body class="article">
 <div id="header">
+<h1>Pushing Apache HTTP Server logs using a fluentd relay</h1>
 </div>
 <div id="content">
-<div class="sect1">
-<h2 id="_pushing_apache_http_server_logs_using_a_fluentd_relay">Pushing Apache HTTP Server logs using a fluentd relay</h2>
+<div id="preamble">
 <div class="sectionbody">
 <div class="paragraph">
 <p>The preferred method to send Apache/Nginx logs is to use <code>fluentd</code> in
@@ -445,6 +445,8 @@ available at <a href="https://www.fluentd.org/download">fluentd download page</a
 </div>
 <div class="paragraph">
 <p>The exact steps are following:</p>
+</div>
+</div>
 </div>
 <div class="sect2">
 <h3 id="_step_1_install_fluentd_or_td_agent"><strong>Step 1:</strong> Install <code>fluentd</code> or <code>td-agent</code></h3>
@@ -522,11 +524,9 @@ logs be visible as the source.</p>
 </div>
 </div>
 </div>
-</div>
-</div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2019-02-01 16:46:11 +0100
+Last updated 2019-02-26 01:09:46 +0100
 </div>
 </div>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.13.1/styles/github.min.css">
