Update info on how CUSTOMER_TOKEN is being provided

--- a/aws-cloudwatch.html
+++ b/aws-cloudwatch.html
@@ -522,8 +522,8 @@ the role</p>
 <div class="ulist">
 <ul>
 <li>
-<p>Enter <code>CUSTOMER_TOKEN</code> as the <code>Key</code> and the <em>actual token</em> as the
-<code>value</code></p>
+<p>Enter <code>CUSTOMER_TOKEN</code> as the <code>Key</code> and the <em>actual token</em> (available in <strong>Customer Tokens</strong> section of the user portal)
+as the <code>value</code></p>
 </li>
 </ul>
 </div>
@@ -561,7 +561,7 @@ those changes</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2019-02-26 01:09:52 +0100
+Last updated 2019-02-26 15:03:31 +0100
 </div>
 </div>
 </body>
