--- a/dot-net.html
+++ b/dot-net.html
@@ -451,9 +451,14 @@ from the GitHub repository and include it as a dpendency in your project</p>
     .WriteTo.Fluentd(new FluentdHandlerSettings
     {
         Tag = "Some.App.Name",
-        customer_token = "YOUR CUSTOMER TOKEN"
+        customer_token = "CUSTOMER TOKEN"
     })
     .CreateLogger();</code></pre>
+</div>
+</div>
+<div class="literalblock">
+<div class="content">
+<pre>`CUSTOMER_TOKEN` needs to be replaced with the value available in *Customer Tokens* section of the user portal.</pre>
 </div>
 </div>
 </div>
@@ -483,7 +488,7 @@ folder of the plugin repository.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2019-02-26 01:09:56 +0100
+Last updated 2019-02-26 15:04:02 +0100
 </div>
 </div>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.13.1/styles/github.min.css">
