--- a/fluentd.html
+++ b/fluentd.html
@@ -458,7 +458,7 @@ as a relay or as a source of logs. Following properties must be set:</p>
 <div class="ulist">
 <ul>
 <li>
-<p><strong>(required)</strong> <code>cs_customer_token</code> &#8594; the actual <code>CUSTOMER_TOKEN</code> value</p>
+<p><strong>(required)</strong> <code>cs_customer_token</code> &#8594; the actual <code>CUSTOMER_TOKEN</code> value (available in <strong>Customer Tokens</strong> section of the user portal)</p>
 </li>
 <li>
 <p><em>(optional)</em> <code>cs_pattern_key</code> &#8594; name of the field that will be a
@@ -510,7 +510,7 @@ logs</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2019-02-26 01:10:00 +0100
+Last updated 2019-02-26 15:04:20 +0100
 </div>
 </div>
 </body>
