--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p>LogSense supports wide array of log sources through two popular
 protocols: <strong>syslog</strong> and <strong>fluentd</strong>. Either a generic library or a
 dedicated solution can be used with the only requirement being providing
-<code>CUSTOMER_TOKEN</code> (sent in the registration confirmation e-mail) which
+<code>CUSTOMER_TOKEN</code> (available in <strong>Customer Tokens</strong> section of the user portal) which
 allows to identify and authorize the data stream.</p>
 </div>
 <div class="paragraph">
@@ -567,7 +567,7 @@ dashboards</a></p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2019-02-21 10:51:37 +0100
+Last updated 2019-02-26 15:07:31 +0100
 </div>
 </div>
 </body>
