--- a/java.html
+++ b/java.html
@@ -514,7 +514,7 @@ public class Example {
 <h3 id="_step_3_setup_logback_xml_to_configure_output"><strong>Step 3:</strong> setup <code>logback.xml</code> to configure output</h3>
 <div class="paragraph">
 <p>Create <code>src/resources/logback.xml</code> file with following contents
-(filling-in <code>CUSTOMER_TOKEN</code> with the proper value):</p>
+(filling-in <code>CUSTOMER_TOKEN</code> with the proper value, available in <strong>Customer Tokens</strong> section of the user portal):</p>
 </div>
 <div class="listingblock">
 <div class="content">
@@ -568,7 +568,7 @@ public class Example {
 <pre>$ cd logback-logsense/example
 
 (edit src/main/resources/logback.xml using your favorite editor
- and replace CUSTOMER_TOKEN with the actual token sent to you)</pre>
+ and replace CUSTOMER_TOKEN with the value available in *Customer Tokens* section of the user portal.)</pre>
 </div>
 </div>
 </div>
@@ -659,7 +659,7 @@ repository</a></p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2019-02-26 01:10:04 +0100
+Last updated 2019-02-26 15:05:27 +0100
 </div>
 </div>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.13.1/styles/github.min.css">
