--- a/nc-test.html
+++ b/nc-test.html
@@ -441,8 +441,7 @@ utility that usually comes preinstalled on Linux or macOS systems.</p>
 </div>
 <div class="paragraph">
 <p>To send a log you can type following command (replacing <code>IP</code> with any IP
-address and <code>CUSTOMER_TOKEN</code> with the value that was provided to you in
-the confirmation email):</p>
+address and <code>CUSTOMER_TOKEN</code> with the value available in <strong>Customer Tokens</strong> section of the user portal):</p>
 </div>
 <div class="literalblock">
 <div class="content">
@@ -464,7 +463,7 @@ which should be immediately visible in LogSense.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2019-02-26 01:10:12 +0100
+Last updated 2019-02-26 15:06:03 +0100
 </div>
 </div>
 </body>
