--- a/nginx.html
+++ b/nginx.html
@@ -464,8 +464,8 @@ output of the log records.</p>
 (macOS) or <code>C:\opt\td-agent\etc\td-agent\td-agent.conf</code> (Windows)</p>
 </div>
 <div class="paragraph">
-<p>Please replace <code>CUSTOMER_TOKEN</code> with the token provided to you in the
-email. The <code>YOUR_IP</code> value should be replaced with the IP you want the
+<p>Please replace <code>CUSTOMER_TOKEN</code> with the value available in <strong>Customer Tokens</strong>
+section of the user portal. The <code>YOUR_IP</code> value should be replaced with the IP you want the
 logs be visible as the source.</p>
 </div>
 <div class="paragraph">
@@ -526,7 +526,7 @@ logs be visible as the source.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2019-02-26 01:10:16 +0100
+Last updated 2019-02-26 15:06:21 +0100
 </div>
 </div>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.13.1/styles/github.min.css">
