--- a/nodejs.html
+++ b/nodejs.html
@@ -485,6 +485,9 @@ function emitLog(message, data={}, callback) {
 }</code></pre>
 </div>
 </div>
+<div class="paragraph">
+<p>Please replace <code>CUSTOMER_TOKEN</code> with the value available in <strong>Customer Tokens</strong> section of the user portal.</p>
+</div>
 </div>
 <div class="sect2">
 <h3 id="_step_3_use_the_function"><strong>Step 3:</strong> Use the function</h3>
@@ -508,7 +511,7 @@ page.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2019-02-26 01:10:19 +0100
+Last updated 2019-02-26 15:06:33 +0100
 </div>
 </div>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.13.1/styles/github.min.css">
