--- a/windows.html
+++ b/windows.html
@@ -488,8 +488,8 @@ command prompt, execute following line:</p>
 <h3 id="_step_3_prepare_the_config"><strong>Step 3:</strong> Prepare the config</h3>
 <div class="paragraph">
 <p>Open <code>C:\opt\td-agent\etc\td-agent\td-agent.conf</code> and add following
-entries. Please replace <code>CUSTOMER_TOKEN</code> with the token provided to you
-in the email. The <code>YOUR_IP</code> value should be replaced with the IP you
+entries. Please replace <code>CUSTOMER_TOKEN</code> with the value available in <strong>Customer Tokens</strong> section of
+the user portal. The <code>YOUR_IP</code> value should be replaced with the IP you
 want the logs be visible as the source.</p>
 </div>
 <div class="listingblock">
@@ -577,7 +577,7 @@ Double click on <code>Fluentd Windows Service</code> and click Start button.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2019-02-26 01:10:25 +0100
+Last updated 2019-02-26 15:06:53 +0100
 </div>
 </div>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.13.1/styles/github.min.css">
