--- a/linux.html
+++ b/linux.html
@@ -460,7 +460,7 @@ messages.</p>
 <div class="title">Note</div>
 </td>
 <td class="content">
-<code>CUSTOMER_TOKEN</code> must be replaced with the token provided to you.
+<code>CUSTOMER_TOKEN</code> must be replaced with the value available in <strong>Customer Tokens</strong> section of the user portal.
 </td>
 </tr>
 </table>
@@ -528,7 +528,7 @@ syslog acting now as a relay. For instance:</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2019-02-26 01:10:09 +0100
+Last updated 2019-02-26 15:05:44 +0100
 </div>
 </div>
 </body>
