How to send logs from Docker containers using the LogSense forwarder

--- a/index.html
+++ b/index.html
@@ -463,7 +463,10 @@ structured logs and better troubleshooting capabilities.</p>
 <p><a href="linux.html">Syslog protocol via <code>syslog-ng</code></a></p>
 </li>
 <li>
-<p><a href="fluentd.html">Generic <code>fluentd</code>-as-a-relay config</a></p>
+<p><a href="fluentd.html">Generic <code>fluentd</code> forwarder config</a></p>
+</li>
+<li>
+<p><a href="fluentd-container.html">Docker <code>fluentd</code> forwarder</a></p>
 </li>
 </ul>
 </div>
@@ -521,6 +524,9 @@ e.g. MS SQL)</a></p>
 <li>
 <p><a href="kubernetes.html">Kubernetes cluster logs using <code>fluentd</code></a></p>
 </li>
+<li>
+<p><a href="docker.html">Docker containers logs</a></p>
+</li>
 </ul>
 </div>
 </div>
@@ -539,7 +545,7 @@ e.g. MS SQL)</a></p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2019-03-06 08:57:41 UTC
+Last updated 2019-03-12 15:18:38 UTC
 </div>
 </div>
 </body>
