--- a/python.html
+++ b/python.html
@@ -536,7 +536,7 @@ class MyComplexProcess:
 <div class="listingblock">
 <div class="content">
 <pre class="highlightjs highlight"><code class="language-bash hljs" data-lang="bash">$ pip install Flask
-$ LOGSENSE_CUSTOMER_TOKEN=&lt;your token&gt; FLASK_APP=index.py flask run</code></pre>
+$ LOGSENSE_TOKEN=&lt;your token&gt; FLASK_APP=index.py flask run</code></pre>
 </div>
 </div>
 <div class="paragraph">
@@ -554,7 +554,7 @@ calls and get a collection of records:</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2019-03-13 20:46:02 +0100
+Last updated 2019-03-14 09:12:38 +0100
 </div>
 </div>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.13.1/styles/github.min.css">
