--- a/fluentd-container.html
+++ b/fluentd-container.html
@@ -472,12 +472,12 @@ services:
 </div>
 </div>
 <div class="paragraph">
-<p>Adding <code>-p 127.0.0.1:24224:24224</code> will make Docker to listen on the local interface only.</p>
+<p>Adding <code>-p 127.0.0.1:24224:24224</code> will make Docker container to listen on the local interface only.</p>
 </div>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2019-03-13 13:25:28 UTC
+Last updated 2019-03-18 09:05:58 UTC
 </div>
 </div>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.13.1/styles/github.min.css">
